--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -221,8 +221,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
                     android:backgroundTint="@color/green_800"
-                    android:fontFamily="@font/worksans_variablefont_wght"
-                    android:textFontWeight="600"
+                    android:fontFamily="@font/worksans_bold"
                     android:text="@string/checkin"
                     android:textColor="@color/gray_50"
                     app:cornerRadius="8dp" />
@@ -723,8 +722,7 @@
                     android:textColor="@color/gray_50"
                     android:layout_marginTop="24dp"
                     app:cornerRadius="8dp"
-                    android:fontFamily="@font/worksans_variablefont_wght"
-                    android:textFontWeight="600"
+                    android:fontFamily="@font/worksans_bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
